--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<div class="sidebar">
+  <div class="logo">Omer<span>Toledano</span></div>
+  <nav>
+    <a href="" class="nav-item">Home</a>
+    <a href="" class="nav-item">About</a>
+    <a href="" class="nav-item active">Portfolio</a>
+    <a href="" class="nav-item">Contact</a>
+  </nav>
+</div>
+
+<div class="main-content">
+  <div class="portfolio">
+    <div class="portfolio-item medium">one</div>
+    <div class="portfolio-item large two">two</div>
+    <div class="portfolio-item medium">three</div>
+    <div class="portfolio-item small">four</div>
+    <div class="portfolio-item tall">five</div>
+    <div class="portfolio-item wide">six</div>
+    <div class="portfolio-item wide">six</div>
+    <div class="portfolio-item medium">one</div>
+  </div>
+</div>
 </body>
 </html>
