--- a/index.html
+++ b/index.html
@@ -544,8 +544,7 @@
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:hello@tom.com">hello@tom.com</a></p>
-                    <p><a href="mailto:tomsaulnier@gmail.com">tomsaulnier@gmail.com</a></p>
+                    <p><a href="mailto:omer@omertoledano.com">omer@omertoledano.com</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
