--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/CJCUC_Logo.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="http://cjcuc.org">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -363,7 +363,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/Day_to_Praise_Logo.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="http://daytopraise.com">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -380,7 +380,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/cup_of_salvation.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="http://cupofsalvation.com">
                         <i class="icon-link"></i>
                       </a>
                     </div>
