--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
           <!-- Portfolio Recent Projects -->
           <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development print">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="assets/img/gallery/CJCUC_Logo.jpg" alt="" />  
@@ -354,7 +354,7 @@
                 </div>               
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix design print">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="assets/img/gallery/Day_to_Praise_Logo.jpg" alt=""/> 
@@ -371,7 +371,7 @@
                 </div>               
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="assets/img/gallery/cup_of_salvation.jpg" alt=""/> 
