--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
               <div class="portfolio-item">
                 <div class="shot-item">
-                  <img src="assets/img/gallery/img-4.jpg" alt="" /> 
+                  <img src="assets/img/gallery/Blessing_Bethlehem.jpg" alt="" /> 
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-4.jpg">
+                      <a class="lightbox preview" href="assets/img/gallery/Blessing_Bethlehem.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="http://www.blessingbethlehem.com">
                         <i class="icon-link"></i>
                       </a>
                     </div>
