--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Online Professional</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/omer.toledano"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
-                    <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
+                    <a class="twitter" href="https://twitter.com/OmerToledano"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/omert33/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="#"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/omertoledano/"><i class="icon-social-linkedin"></i></a>
                   </li>
                   <li>
-                    <a class="google" href="#"><i class="icon-social-google"></i></a>
+                    <a class="google" href="https://plus.google.com/+OmerToledano"><i class="icon-social-google"></i></a>
                   </li>
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
@@ -573,19 +573,19 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon">
                 <li>
-                  <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                  <a class="facebook" href="https://www.facebook.com/omer.toledano"><i class="icon-social-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/OmerToledano"><i class="icon-social-twitter"></i></a>
                 </li>
                 <li>
-                  <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                  <a class="instagram" href="https://www.instagram.com/omert33/"><i class="icon-social-instagram"></i></a>
                 </li>
                 <li>
-                  <a class="instagram" href="#"><i class="icon-social-linkedin"></i></a>
+                  <a class="instagram" href="https://www.linkedin.com/in/omertoledano/"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li>
-                  <a class="instagram" href="#"><i class="icon-social-google"></i></a>
+                  <a class="instagram" href="https://plus.google.com/+OmerToledano"><i class="icon-social-google"></i></a>
                 </li>
               </ul>
               <p>Copyright © 2018 UIdeck All Right Reserved</p>
