--- a/index.html
+++ b/index.html
@@ -252,23 +252,16 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bsc In CSE - Yale University</h3>
-                    <span>2012 - 2016</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">MCSE - Microsoft Certified Solutions Expert - Course</h3>
+                    <span>2002 - 2003</span>
+                    <p class="line-text">Computers, servers, network administration...</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Higher Secondary School - San Francisco College</h3>
-                    <span>2010 - 2012</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="content-text">
-                    <h3 class="line-title">Secondary School - Labratory High School</h3>
-                    <span>2005 - 2010</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Katzanelson - High School</h3>
+                    <span>1995 - 1998</span>
+                    <p class="line-text">Eeeeech...</p>
                   </div>
                 </li>
               </ul>
@@ -281,25 +274,25 @@
                   <i class="icon-briefcase"></i>
                   <h2 class="timelin-title">Experience</h2>
                 </li>
-                <li>
+				<li>
                   <div class="content-text">
-                    <h3 class="line-title">Art Director - Tesla Inc.</h3>
-                    <span>Jan 2018 - Present</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Email Marketing - MEMO Global</h3>
+                    <span>Jan 2009 - Present</span>
+                    <p class="line-text">Managing creative from construction to delivery and eyeing performance reports</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">UX/UI Designer - Samsung</h3>
-                    <span>Nov 2016 - Dec 2017</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Backoffice - DSNR (MEMO Global)</h3>
+                    <span>Feb 2006 - Jan 2009</span>
+                    <p class="line-text">Non-frontal customer service</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Intern UI Designer - UIdeck</h3>
-                    <span>Mar 2015 - Oct 2016</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Web Developer - Freelance</h3>
+                    <span>1997 - Present</span>
+                    <p class="line-text">HTML, CSS, Javascript, CMS (Wordpress, Joomla, Drupal), PHP, MySQL</p>
                   </div>
                 </li>
               </ul>
