--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                   <li>
                     <a class="google" href="https://plus.google.com/+OmerToledano"><i class="icon-social-google"></i></a>
                   </li>
+				  <li>
+                    <a class="wikipedia" href="https://en.wikipedia.org/wiki/User:Omert33"><i class="icon-social-wikipedia"></i></a>
+                  </li>
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
                   <a href="#" class="btn btn-common">Get a Free Quote</a>
