--- a/index.html
+++ b/index.html
@@ -447,23 +447,23 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.3s">
               <div class="icon"><i class="icon-briefcase"></i></div>
-              <div class="counterUp">250</div>
-              <p>Project Working</p>
+              <div class="counterUp">1</div>
+              <p>Thing at a Time</p>
             </div>
           </div>
           <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon"><i class="icon-check"></i></div>
-              <div class="counterUp">950</div>
-              <p>Project Done</p>
+              <div class="counterUp">97</div>
+              <p>Wikipedia Articles Created</p>
             </div>
           </div>
           <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.9s">
               <div class="icon"><i class="icon-diamond"></i></div>
-              <div class="counterUp">150</div>
+              <div class="counterUp">2</div>
               <p>Awards Received</p>
             </div>
           </div>
@@ -471,8 +471,8 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon"><i class="icon-heart"></i></div>
-              <div class="counterUp">299</div>
-              <p>Happy Clients</p>
+              <div class="counterUp">1</div>
+              <p>Love</p>
             </div>
           </div>
         </div>
