--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <i class="icon-grid"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Front-end Development</a></h3>
+                <h3><a href="#">Web Development</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Graphic Design</a></h3>
+                <h3><a href="#">Graphic Design & Video Editing</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
               </div>
             </div>
@@ -217,7 +217,7 @@
                 <i class="icon-briefcase"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Business Branding</a></h3>
+                <h3><a href="#">Online Marketing</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
               </div>
             </div>
