--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                     <div class="contact-icon">
                       <i class="fa fa-map-marker"></i>
                     </div>
-                    <p>San Francisco, CA</p>
+                    <p>The Universe</p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
