--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   </li>
 				</ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
-                  <a href="#" class="btn btn-common">Get a Free Quote</a>
+                  <a href="#contact" class="btn btn-common">Get a Free Quote</a>
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Graphic Design & Video Editing</a></h3>
+                <h3><a href="#">Graphic Design</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
               </div>
             </div>
@@ -550,7 +550,7 @@
               </div>
             </div>
             <div class="col-md-12">
-            <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"></object>
+            <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3377.0858016221805!2d34.88659151562392!3d32.174960921744294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d383ef2769c83%3A0xa7ba951fec99b2ec!2sMemo+Global!5e0!3m2!1sen!2sil!4v1543641615154"></object>
             </div>
           </div>
         </div>
