Update index.html and works

--- a/index.html
+++ b/index.html
@@ -398,13 +398,13 @@
                 </div>               
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
               <div class="portfolio-item">
                 <div class="shot-item">
-                  <img src="assets/img/gallery/img-5.jpg" alt="" /> 
+                  <img src="assets/img/gallery/omer_life_death_tongue.jpg" alt="" /> 
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-5.jpg">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_life_death_tongue.jpg">
                         <i class="icon-eye"></i>
                       </a>
                       <a class="link" href="#">
@@ -418,10 +418,61 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
               <div class="portfolio-item">
                 <div class="shot-item">
-                  <img src="assets/img/gallery/img-6.jpg" alt=""/>
+                  <img src="assets/img/gallery/omer_singing_plant.jpg" alt=""/>
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-6.jpg">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_singing_plant.jpg">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="#">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+			<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="assets/img/gallery/omer_toledano_doughnuts.jpg" alt="" /> 
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_toledano_doughnuts.jpg">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="#">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+			<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="assets/img/gallery/omer_toledano_duck.jpg" alt="" /> 
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_toledano_duck.jpg">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="#">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+			<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="assets/img/gallery/omer_toledano_voltaire.jpg" alt="" /> 
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_toledano_voltaire.jpg">
                         <i class="icon-eye"></i>
                       </a>
                       <a class="link" href="#">
