--- a/index.html
+++ b/index.html
@@ -452,6 +452,23 @@
 			<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <img src="assets/img/gallery/omer_toledano_pueblo.jpg" alt="" /> 
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="assets/img/gallery/omer_toledano_pueblo.jpg">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="#">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+			<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+              <div class="portfolio-item">
+                <div class="shot-item">
                   <img src="assets/img/gallery/omer_toledano_duck.jpg" alt="" /> 
                   <div class="overlay">
                     <div class="icons">
