--- a/yoga-sutras.html
+++ b/yoga-sutras.html
@@ -411,6 +411,12 @@ div.bl-panel-items > div.bl-hide-current-work {
 .bl-main > section:nth-child(4).bl-expand {
 	background: #0D8278;
 }
+.bl-main > section:nth-child(5).bl-expand {
+	background: #EE4444;
+}
+.bl-main > section:nth-child(6).bl-expand {
+	background: #F98262;
+}
 
 .bl-main.bl-expand-item > section:not(.bl-expand),
 .bl-main.bl-expand-item > section.bl-scale-down {
