--- a/yoga-sutras/index.html
+++ b/yoga-sutras/index.html
@@ -159,12 +159,13 @@
 		</div><!-- /triggers -->
 
 		<div id="pt-main" class="pt-perspective">
-			<div class="pt-page pt-page-1"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
-			<div class="pt-page pt-page-2"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
-			<div class="pt-page pt-page-3"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
-			<div class="pt-page pt-page-4"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
-			<div class="pt-page pt-page-5"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
-			<div class="pt-page pt-page-6"><h1><span>A collection of</span><strong>Page</strong> Transitions</h1></div>
+			<div class="pt-page pt-page-1"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> ONE</h1></div>
+			<div class="pt-page pt-page-2"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> TWO</h1></div>
+			<div class="pt-page pt-page-3"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> THREE</h1></div>
+			<div class="pt-page pt-page-4"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FOUR</h1></div>
+			<div class="pt-page pt-page-5"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FIVE</h1></div>
+			<div class="pt-page pt-page-6"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SIX</h1></div>
+			<div class="pt-page pt-page-7"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SEVEN</h1></div>
 		</div>
 
 		<div class="pt-message">
