--- a/index.html
+++ b/index.html
@@ -259,9 +259,23 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Katzanelson - High School</h3>
-                    <span>1995 - 1998</span>
-                    <p class="line-text">Eeeeech...</p>
+                    <h3 class="line-title">Woodway Elementary</h3>
+                    <span>1990 - 1991</span>
+                    <p class="line-text">Served as Lieutenant of the school Safety Patrol. In this capacity, I was responsible for raising the school flag every morning and greeting the younger kids in the carpool lane. Earned numerous academic awards and honors for academic achievement.</p>
+                  </div>
+                </li>
+				<li>
+                  <div class="content-text">
+                    <h3 class="line-title">J.T. Stevens Elementary</h3>
+                    <span>1989 - 1990</span>
+                    <p class="line-text">Played the violin, Wrote a book about chameleons, Wrote an award-winning essay about saying NO to drugs, Played tag-football with my friends.</p>
+                  </div>
+                </li>
+				<li>
+                  <div class="content-text">
+                    <h3 class="line-title">Fort Worth Hebrew Day School</h3>
+                    <span>1986 - 1989</span>
+                    <p class="line-text">Pledged every morning, Prayer time on Thursdays, Growing beans, Caring for Chameleon lizards, Book-It reading program, Third-grade play.</p>
                   </div>
                 </li>
               </ul>
