--- a/tests/index.html
+++ b/tests/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<body>
 <script>
 function loadJSON(callback) {   
 
@@ -22,4 +23,5 @@ function loadJSON(callback) {
  });
 }
 </script>
+</body>
 </html>
