--- a/tests/index.html
+++ b/tests/index.html
@@ -15,7 +15,7 @@ xmlhttp.onreadystatechange = function() {
 	
 	// Create accordion
 	  for (episode_number in myObj) {
-	  txt += "Season:" + myObj..episodes[episode_number].season + "<br />Episode:" + myObj.episodes[episode_number].episode
+	  txt += "Season:" + myObj.episodes[episode_number].season + "<br />Episode:" + myObj.episodes[episode_number].episode
 	  }
     document.getElementById("show_div").innerHTML = myObj.name;
   }
