--- a/tests/index.html
+++ b/tests/index.html
@@ -4,7 +4,7 @@
 <script>
 function change_show(show_div) {
 
-var episode_number;
+var episode_number, myObj, txt = "";
 
 episode_number += this.episode_number.value;
 
