--- a/maptest.html
+++ b/maptest.html
@@ -33,6 +33,7 @@
 	}).addTo(mymap);
 
 	var marker = L.marker([51.5, -0.09]).addTo(mymap);
+	marker.bindPopup("<b>Amit is here!</b><br>Hello people!").openPopup();
 	
 	var circle = L.circle([51.508, -0.11], {
 	color: 'red',
